--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,5 +1,4 @@
 name: publish
-
 on:
   release:
     types: [published]
@@ -12,8 +11,8 @@ jobs:
       - uses: actions/setup-python@v5
         with:
           python-version: '3.10'
-      - run: python -m pip install --upgrade pip build
-      - run: python -m build
+      - run: python -m pip install --upgrade pip build twine
+      - run: rm -rf build dist *.egg-info && python -m build && twine check dist/*
       - name: Publish to PyPI
         uses: pypa/gh-action-pypi-publish@v1.10.3
         with:
