--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["setuptools>=68", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "cocpy"
+name = "cocpysdk"
 version = "0.1.0"
 description = "Unofficial Clash of Clans API client for Python"
 readme = "README.md"
